--- a/qr_code_component/styles.css
+++ b/qr_code_component/styles.css
@@ -4,8 +4,15 @@
     box-sizing: border-box;
 }
 
-html{
+body{
     background-color: skyblue;
+    
+}
+.center{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    min-height:100vh;
 }
 
 #qr-container{
@@ -16,7 +23,7 @@ html{
     padding:10px;
     border-radius:10px;
     background-color: white;
-    margin: 0 auto;
+    margin: auto auto;
     
 }
 
