--- a/newsletter-signup/styles.css
+++ b/newsletter-signup/styles.css
@@ -15,8 +15,42 @@ body{
     margin:0;
     font-size:16px;
     font-family: "Roboto";
+    background-color: var(--white);
 }
 
+@media(min-width: 1440px){
+    body{
+        background-color: var(--charcoal-grey);
+    }
+    main{
+        display:flex;
+        justify-content: center;
+        padding-top:10%;
+    }
+
+    .image{
+        grid-area: image;
+        width:100%;
+        height:100%;
+        border-radius:10px;
+    }
+    
+    .text{
+        grid-area: text;
+        padding: 1rem 0;
+    }
+    .sign-up-holder{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "text image";
+        background-color: var(--white);
+        border-radius:15px;
+        padding:10px;
+        width:700px;
+    }
+
+    
+}
 .info{
     padding:0 2rem;
 }
