--- a/news-homepage-main/src/styles.css
+++ b/news-homepage-main/src/styles.css
@@ -43,14 +43,17 @@
 @media (min-width :640px){
     .navbar{
         display:block;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
     .grid-container{
         display:grid;
         grid-gap: 1.5rem;
-        /* grid-template: 
+        grid-template: 
         "image image news"
         "title read-more news"
-        "trend trend trend" */
+        "trend trend trend";
+        padding:1rem;
     }
     .hero-img-container{
         grid-column: 1 / 3; 
@@ -59,18 +62,12 @@
         background-size: cover; 
         background-position: center;
     }
-    /* .news{
+    .news{
         grid-area: news;
     }
-    .title{
-        grid-area:title;
-    }
-    .read-more{
-        grid-area: more;
-    }
-    .trends{
-        grid-area:trend;
+    #intro{
         display:flex;
-    } */
-
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
 }
