--- a/news-homepage-main/src/output.css
+++ b/news-homepage-main/src/output.css
@@ -776,40 +776,98 @@ body{
 
 /* TABLET SIZING */
 
-@media (min-width :640px){
-  .navbar{
-    display:block;
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .grid-container{
-    display:grid;
-    grid-gap: 1.5rem;
-    grid-template: 
+/* @media (min-width :640px){
+    .navbar{
+        display:block;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    .grid-container{
+        display:grid;
+        grid-gap: 1.5rem;
+        grid-template: 
         "image image news"
-        "title read-more news"
+        "title more news"
         "trend trend trend";
-    padding:1rem;
+        padding:1rem;
+    }
+    .hero-img-container{
+        grid-column: 1 / 3; 
+    } 
+    .hero-img{
+        background-size: cover; 
+        background-position: center;
+    }
+    .news{
+        grid-area: news;
+    }
+    #intro{
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+} */
+
+/* TABLET SIZING */
+
+@media (min-width: 1250px) {
+  .grid-container {
+    display: grid;
+    grid-gap: 1.5rem;
+    padding: 1rem;
+    grid-template-columns: repeat(2, 1fr), 0.75fr;
+    grid-template-rows: 400px auto auto;
+    /* Adjusts the row sizes */
+    grid-template-areas: 
+            "hero hero news"
+            "intro intro news"
   }
 
-  .hero-img-container{
-    grid-column: 1 / 3;
+  .navbar{
+    display:flex;
   }
 
-  .hero-img{
-    background-size: cover;
-    background-position: center;
-  }
-
-  .news{
+  .news {
     grid-area: news;
   }
 
   #intro{
+    grid-column: 1 / 3;
     display:flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  }
+
+  .hero-img-container {
+    grid-area: hero;
+  }
+
+  .hero-img-container img{
+    height:100%;
+    width:100%;
+  }
+
+  #title {
+    width: 100%;
+    font-size: 5rem;
+    line-height: 4rem;
+  }
+
+  .more {
+    padding-left:3rem;
+    font-size:1rem;
+    width:100%;
+  }
+
+  .trends{
+    grid-column: 1 / 4;
+    height:100%;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .trend{
+    height:100%;
+    width:100%;
   }
 }
 
@@ -824,16 +882,6 @@ body{
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .sm\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
   .sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -841,9 +889,80 @@ body{
 }
 
 @media (min-width: 768px) {
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .md\:w-32 {
+    width: 8rem;
+  }
+
+  .md\:w-48 {
+    width: 12rem;
+  }
+
+  .md\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+
+  .md\:max-w-48 {
+    max-width: 12rem;
+  }
+
+  .md\:max-w-36 {
+    max-width: 9rem;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(2rem * var(--tw-space-x-reverse));
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:p-12 {
+    padding: 3rem;
+  }
+
+  .md\:p-32 {
+    padding: 8rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
