--- a/news-homepage-main/src/styles.css
+++ b/news-homepage-main/src/styles.css
@@ -40,7 +40,7 @@
 }
 
 /* TABLET SIZING */
-@media (min-width :640px){
+/* @media (min-width :640px){
     .navbar{
         display:block;
         padding-left: 1rem;
@@ -51,7 +51,7 @@
         grid-gap: 1.5rem;
         grid-template: 
         "image image news"
-        "title read-more news"
+        "title more news"
         "trend trend trend";
         padding:1rem;
     }
@@ -69,5 +69,57 @@
         display:flex;
         flex-direction: column;
         justify-content: space-evenly;
+    }
+} */
+
+/* TABLET SIZING */
+@media (min-width: 1250px) {
+    .grid-container {
+        display: grid;
+        grid-gap: 1.5rem;
+        padding: 1rem;
+        grid-template-columns: repeat(2, 1fr), 0.75fr;
+        grid-template-rows: 400px auto auto; /* Adjusts the row sizes */
+        grid-template-areas: 
+            "hero hero news"
+            "intro intro news"
+    }
+    .navbar{
+        display:flex;
+    }
+    .news {
+        grid-area: news;
+    }
+    #intro{
+        grid-column: 1 / 3; 
+        display:flex;
+    }
+    .hero-img-container {
+        grid-area: hero; 
+    }
+    .hero-img-container img{
+        height:100%;
+        width:100%;
+    }
+    #title {
+        width: 100%;
+        font-size: 5rem;
+        line-height: 4rem;
+    }
+    .more {
+        padding-left:3rem;
+        font-size:1rem;
+        width:100%;
+    }
+    .trends{
+        grid-column: 1 / 4;
+        height:100%;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+    }
+    .trend{
+        height:100%;
+        width:100%;
     }
 }
