--- a/ip-address-tracker/src/index.css
+++ b/ip-address-tracker/src/index.css
@@ -65,6 +65,12 @@ body{
   margin-bottom:2rem;
   width:100%;
 }
+#ip-search-holder input:focus-visible{
+  border: 3px solid orange;
+}
+#ip-search-holder input:hover{
+  cursor: pointer;
+}
 #ip-search-holder button{
   width:20%;
   border:none;
@@ -150,5 +156,14 @@ body{
 
 /* DESKTOP SIZING */
 @media (min-width: 1000px){
-
+ #ip-search-holder button{
+  width:50px;
+  cursor: pointer;
+ }
+ #ip-search-holder button:focus-visible{
+   border:none;
+ }
+ #ip-search-holder button:hover{
+  background-color: var(--dark-grey);
+}
 }
